tests/codegen/errors/reader/signatures-params/atom.reader.error.reader.param.double.colon.hint/reader-param-double-colon-hint.mon
;; TEST-ID: tests.codegen.reader-error.reader-param-double-colon-hint
;; TEST-TIER: known-fail
;; TEST-STATUS: quarantined-baseline-2026-06-15
;; TEST-KNOWN-FAILURE: diagnostic-mismatch
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: reader-errors/signatures-params
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: use ‘:’ instead of ‘::’ to annotate parameter types
;; TEST-ATOM: atom.reader.error.reader.param.double.colon.hint
;; TEST-CODEGEN-ATOM: atom.reader.error.reader.param.double.colon.hint
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: use ‘:’ instead of ‘::’ to annotate parameter types
;; TEST-READER-PATH: reader.c:1916 parser.parameters
;; TEST-CODEGEN-PATH: diagnostic.parser.parameters
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-COVERAGE: reader.c:1916 use ‘:’ instead of ‘::’ to annotate parameter types
;; TEST-USES-ATOM: atom.reader.error.reader.param.double.colon.hint
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.reader.error
;; TEST-USES-ATOM: atom.reader.error.family.parser.parameters
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-REFINES: atom.reader.error
;; TEST-MENU: errors/reader/signatures-params/atom.reader.error.reader.param.double.colon.hint
;; TEST-MENU-PATH: codegen/errors/reader/signatures-params/atom.reader.error.reader.param.double.colon.hint
;; TEST-ATOM-LEAF: atom.reader.error.reader.param.double.colon.hint
;; TEST-CLI-TARGET: codegen errors reader signatures-params

(module Main)
(define (bad [x :: Int] -> Int) x)
